<resources>
    <string name="app_name">번개장터</string>
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_following_title">팔로잉</string>
    <string name="main_btm_nav_add_item_title">상품등록</string>
    <string name="main_btm_nav_bungae_talk_title">번개톡</string>
    <string name="main_btm_nav_my_shop_title">마이샵</string>
    <string name="home_search_button">찾고 싶은 상품을 검색해보세요</string>
    <string name="home_men_clothes">남성의류</string>
    <string name="home_fashion">패션잡화</string>
    <string name="home_digital">디지털 가전</string>
    <string name="home_my_phone_price">내폰시세</string>
    <string name="home_show_all">전체보기</string>
    <string name="home_today_recommend">오늘의 상품 추천</string>
    <string name="item_detail_title">카테고리</string>
    <string name="item_detail_recommend_service">추천서비스</string>
    <string name="item_detail_recommend_service1">우리동네</string>
    <string name="item_detail_recommend_service2">팔로잉</string>
    <string name="item_detail_recommend_service3">번개유심</string>
    <string name="item_detail_recommend_service4">혜택/이벤트</string>
    <string name="item_detail_recommend_service5">친구초대</string>
    <string name="item_detail_recommend_service6">내폰시세</string>
    <string name="item_detail_casual_transation">생활거래</string>
    <string name="item_detail_casual_transation1">지역 서비스</string>
    <string name="item_detail_casual_transation2">원룸/함께살아요</string>
    <string name="item_detail_casual_transation3">구인구직</string>
    <string name="item_detail_casual_transation4">재능</string>
    <string name="item_detail_second_transaction">중고거래</string>
    <string name="item_detail_second_transaction1">여성의류</string>
    <string name="item_detail_second_transaction2">남성의류</string>
    <string name="item_detail_second_transaction3">패션잡화</string>
    <string name="item_detail_second_transaction4">뷰티/미용</string>
    <string name="item_detail_second_transaction5">유아동/출산</string>
    <string name="item_detail_second_transaction6">스포츠/레저</string>
    <string name="item_detail_second_transaction7">디지털/가전</string>
    <string name="item_detail_second_transaction8">도서/티켓/애완</string>
    <string name="item_detail_second_transaction9">문구/가구/식품</string>
    <string name="item_detail_second_transaction10">차량/오토바이</string>
    <string name="item_detail_second_transaction11">기타</string>
    <string name="item_detail_second_transaction12">스타굿즈</string>
    <string name="item_detail_second_transaction13">구인구직</string>
    <string name="item_detail_second_transaction14">재능</string>
    <string name="item_detail_plus1">번개페이 포인트혜택</string>
    <string name="item_detail_plus2">안전하게 거래하고 혜택 받아요</string>
    <string name="my_shop_request">상정문의</string>
    <string name="my_shop_like">찜</string>
    <string name="my_shop_review">후기</string>
    <string name="my_shop_follower">팔로워</string>
    <string name="my_shop_following">팔로잉</string>
    <string name="my_shop_seller_center">판매자센터</string>
    <string name="my_shop_transaction_list">거래내역</string>
    <string name="my_shop_delivery">택배관리</string>
    <string name="my_shop_customer_center">고객센터</string>
    <string name="my_shop_selling">판매중</string>
    <string name="my_shop_booking">예약중</string>
    <string name="my_shop_selled">판매완료</string>
    <string name="my_shop_selling_no">판매중인 상품이 없습니다.</string>
    <string name="my_shop_booking_no">예약중 상품이 없습니다.</string>
    <string name="my_shop_selled_no">판매완료된 상품이 없습니다.</string>
    <string name="my_shop_configuration_title">설정</string>
    <string name="my_shop_configuration_user">사용자 설정</string>
    <string name="my_shop_configuration_user1">계정 설정</string>
    <string name="my_shop_configuration_user2">알림 설정</string>
    <string name="my_shop_configuration_user3">우리동네 지역 설정</string>
    <string name="my_shop_configuration_user4">배송지 설정</string>
    <string name="my_shop_configuration_user5">계좌 설정</string>
    <string name="my_shop_configuration_user6">차단 상점 관리</string>
    <string name="my_shop_configuration_service">서비스 정보</string>
    <string name="my_shop_configuration_service1">이용약관</string>
    <string name="my_shop_configuration_service2">개인정보 처리방침</string>
    <string name="my_shop_configuration_service3">위치기반서비스 이용약관</string>
    <string name="my_shop_configuration_service4">오픈소스 라이선스</string>
    <string name="my_shop_configuration_service5">버전정보</string>
    <string name="my_shop_configuration_log_out">로그아웃(상점명)</string>
    <string name="my_shop_favorite_item_title">관심상품</string>
    <string name="my_shop_favorite_item_tab_favorite">찜</string>
    <string name="my_shop_favorite_item_tab_recently_view">최근 본 상품</string>
    <string name="my_shop_favorite_item_favorite_text">내 컬렉션</string>
    <string name="my_shop_favorite_item_recently_view_text">최근 본 상품</string>
    <string name="my_shop_item_more_dialog_title">더보기</string>
    <string name="my_shop_item_more_dialog_up">UP하기</string>
    <string name="my_shop_item_more_dialog_up_desc">내 상품이 더 잘 보이도록 끌어올려 보세요!</string>
    <string name="my_shop_item_more_dialog_ad">광고하기</string>
    <string name="my_shop_item_more_dialog_ad_desc">내 상품을 더 많은 사람에게 보여주세요!</string>
    <string name="my_shop_item_more_dialog_update">정보수정</string>
    <string name="my_shop_item_more_dialog_update_desc">상품의 이미지, 가격, 이름을 더 매력적으로 바꿔보세요!</string>
    <string name="my_shop_item_more_dialog_share">상품 공유하기</string>
    <string name="my_shop_item_more_dialog_share_desc">상품을 공유하고 판매 확률을 높이세요!</string>
    <string name="my_shop_item_more_dialog_nego">찜한상점 가격제안</string>
    <string name="my_shop_item_more_dialog_nego_desc">상품을 찜한 유저에게 더 좋은 가격을 제시해보세요!</string>
    <string name="my_shop_item_more_dialog_change">상태변경</string>
    <string name="my_shop_item_more_dialog_delivery">택배신청</string>
    <string name="add_item_gallery_title">사진추가</string>
    <string name="add_item_gallery_require">사진을 1장 이상 등록해주세요 (최대 12장)</string>
    <string name="add_item_gallery_take_photo">직접촬영</string>
    <string name="add_item_gallery_select_folder">폴더선택</string>
    <string name="add_item_gallery_max">/12</string>
    <string name="add_item_title">상품 등록하기</string>
    <string name="add_item_name">상품명</string>
    <string name="add_item_category">카테고리</string>
    <string name="add_item_tag">#연관태그</string>
    <string name="add_item_item_description">상품설명</string>
    <string name="add_item_include_delivery_pay">배송비포함</string>
    <string name="add_item_negotiation_possible">협의가능</string>
    <string name="add_item_num">수량</string>
    <string name="add_item_used">중고</string>
    <string name="add_item_new">새상품</string>
    <string name="add_item_change_possible">교환가능</string>
    <string name="add_item_change_impossible">교환불가</string>
    <string name="add_item_description_title">꼭 읽어주세요</string>
    <string name="add_item_description_detail">자세히</string>
    <string name="add_item_description_content1">상품등록 시 </string>
    <string name="add_item_description_content2">번개페이가 자동 적용</string>
    <string name="add_item_description_content3">됩니다. 거래완료 후 등록 된 계좌로 입금되며 </string>
    <string name="add_item_description_content4">정산 확인은\'마이메뉴>구매/판매내역\'</string>
    <string name="add_item_description_content5">에서 가능합니다.</string>
    <string name="add_item_description_emergency_title">재난 긴급생활비 거래 주의안내</string>
    <string name="add_item_description_emergency_content">재난 긴급생활비 거래는 위법행위에 해당할 수 있습니다.
        관련 키워드가 포함되어 있는 상품은 판매완료 처리 됩니다.
        이러한 상품을 판매하는 경우 서비스 이용의 제재 및 관련 법에 따라 처벌받을 수 잇음을 유의하시기 바랍니다.</string>
    <string name="add_item_description_complete">등록완료</string>
    <string name="log_in_another_way">다른 방법으로 로그인</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_detail_ad_title1">"신세계TV쇼핑 스티브매든"</string>
    <string name="item_detail_ad_link1">http://m.shinsegaetvshoping.com</string>
    <string name="item_detail_ad_desc1">스티브매든, 첫구매 10% 할인쿠폰 · 신규가입 최대 5만포인트 적립!</string>
    <string name="item_detail_ad_title2">"롯데백화점몰"</string>
    <string name="item_detail_ad_link2">https://m.department.lotteon.com</string>
    <string name="item_detail_ad_desc2">오프라인 백화점 품격 그대로! 첫구매 5,000원 할인+APP 다운로드 9% 할인</string>
    <string name="item_detail_ad_title3">"티몬 X 스티브매든"</string>
    <string name="item_detail_ad_link3">"http://m.tmon.co.kr"</string>
    <string name="item_detail_ad_desc3">"추가선물증정|아메리카노 교환증정 \n스티브매든, 국/내외 유명브랜드 총집합! 시즌특가+카드할인+상시쿠폰할인+무료배송"</string>
    <string name="item_detail_ad_title4">"스티브매든 AK몰 \n| 신상 라인업 특별 모음전"</string>
    <string name="item_detail_ad_link4">"http://m.akmall.com"</string>
    <string name="item_detail_ad_desc4">"이벤트|다양한 이벤트 응모 \n앱출석 3번이면 무료배송 쿠폰증정! 인기브랜드특가, 카드사별 최대 무이자 24개월</string>
    <string name="item_detail_ad_title5">"털부츠"</string>
    <string name="item_detail_ad_link5">"http://www.shinilcorp.com"</string>
    <string name="item_detail_ad_desc5">"일본 아사히슈즈 수입 대리점 128년 전통 노인신발 쾌보주의 방한화 장화 실내화"</string>
    <string name="item_detail_last">"\"번개장터_컨시어지\" 상점의 판매상품을 제외한 모든 상품들에 대하여, 번개장터㈜는 통신판매중개자로서 중고거래마켓 번개장터의 거래 당사자가 아니며, 입점판매자가 등록한 상품정보 및 거래에 대해 책임을 지지 않습니다."</string>
    <string name="seller_profile_open_day">오픈일</string>
    <string name="seller_profile_visit">방문수</string>
    <string name="seller_profile_product">상품</string>
    <string name="seller_profile_num_review">후기</string>
    <string name="seller_profile_following">팔로잉</string>
    <string name="seller_profile_follower">팔로워</string>
    <string name="seller_profile_badge">상점 배지</string>
    <string name="seller_profile_certification">본인인증</string>
    <string name="seller_profile_shot">신고이력</string>
    <string name="seller_profile_shot_detail">조회하기</string>
    <string name="seller_profile_sell_list">판매내역</string>
    <string name="seller_profile_delivery">택배발송</string>
    <string name="seller_profile_introduce">상점소개</string>
    <string name="seller_profile_time">연락가능시간:24시간 연락가능</string>
    <string name="seller_profile_no_introduce">상점소개가 없습니다.</string>
    <string name="seller_profile_exchange">교환/반품/환불정책</string>
    <string name="seller_profile_before">구매전 유의사항</string>
    <string name="seller_profile_review">후기</string>
    <string name="seller_profile_more_review">0개 더보기</string>
    <string name="seller_profile_no_review">등록된 후기가 없습니다.</string>
    <string name="seller_profile_quest">문의</string>
    <string name="seller_profile_quest_more">0개 더보기</string>
    <string name="seller_profile_comment">답글쓰기</string>
    <string name="seller_profile_delete">삭제하기</string>
    <string name="seller_profile_leave">상점에 문의를 남기세요</string>
    <string name="my_feed_title">팔로잉상점 소식</string>
    <string name="select_category_title">카테고리</string>
    <string name="select_category_recommend_title">추천 카테고리</string>
    <string name="select_category_recommend1">디지털/가전>모바일>스마트폰</string>
    <string name="select_category_recommend2">기타</string>
    <string name="select_category_recommend3">스타굿즈>보이그룹>기타(보이그룹)</string>
    <string name="select_category_recommend4">패션잡화>운동화/캐주얼화>캐주얼화</string>
    <string name="select_category_all_title">전체 카테고리</string>
    <string name="select_category_all_1">여성의류</string>
    <string name="select_category_all_2">패션잡화</string>
    <string name="select_category_all_3">남성의류</string>
    <string name="select_category_all_4">디지털/가전</string>
    <string name="select_category_all_5">도서/티켓/취미/애완</string>
    <string name="select_category_all_6">생활/문구/가구/식품</string>
    <string name="select_category_all_7">ㅅ타굿즈</string>
    <string name="select_category_all_8">스포츠/레저</string>
    <string name="select_category_all_9">뷰티/미용</string>
    <string name="select_category_all_10">유아동/출산</string>
    <string name="select_category_all_11">기타</string>
    <string name="tag_desc1">-태그는 띄어쓰기로 구분되며 최대 9자까지 입력할 수 있습니다.</string>
    <string name="tag_desc2">-태그는 검색의 부가정보로 사용 되지만, 검색 결과 노출을 보장하지는 않습니다.</string>
    <string name="tag_desc3">-검색 광고는 태그정보를 기준으로 노출됩니다.</string>
    <string name="tag_desc4">-상품과 직접 관련이 없는 다른 상품명, 브랜드, 스팸성 키워드 등을 입력하면 노출이 중단되거나 상품이 삭제될 수 있습니다.</string>
</resources>