<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/bunjang_logo"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_home_title" />

    <item
        android:id="@+id/menu_main_btm_nav_following"
        android:icon="@drawable/bunjang_logo"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_following_title" />

    <item
        android:id="@+id/menu_main_btm_nav_add_item"
        android:icon="@drawable/bunjang_logo"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_add_item_title" />

    <item
        android:id="@+id/menu_main_btm_nav_bungae_talk"
        android:icon="@drawable/bunjang_logo"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_bungae_talk_title" />

    <item
        android:id="@+id/menu_main_btm_nav_my_shop"
        android:icon="@drawable/bunjang_logo"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_my_shop_title" />

</menu>
