<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView63"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="더보기"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dialog_my_shop_more_close"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/my_shop_close" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_marginTop="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_marginBottom="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView65"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_shop_item_more_dialog_up"
                android:textColor="#000000"
                android:textSize="@dimen/my_shop_item_more_dialog_sub_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView91"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/my_shop_item_more_dialog_between_text"
                android:text="@string/my_shop_item_more_dialog_up_desc"
                android:textColor="#000000"
                android:textSize="@dimen/my_shop_item_more_dialog_desc" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView72"
            android:layout_width="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_height="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/my_shop_item_more_dialog_horizontal_margin"
            app:srcCompat="@drawable/global_next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_marginTop="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_marginBottom="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_shop_item_more_dialog_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_shop_item_more_dialog_ad"
                android:textColor="#000000"
                android:textSize="@dimen/my_shop_item_more_dialog_sub_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/my_shop_item_more_dialog_ad_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/my_shop_item_more_dialog_between_text"
                android:text="@string/my_shop_item_more_dialog_ad_desc"
                android:textColor="#000000"
                android:textSize="@dimen/my_shop_item_more_dialog_desc" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView721"
            android:layout_width="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_height="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/my_shop_item_more_dialog_horizontal_margin"
            app:srcCompat="@drawable/global_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_my_shop_more_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_marginTop="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_marginBottom="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_shop_item_more_dialog_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_shop_item_more_dialog_update"
                android:textColor="#000000"
                android:textSize="@dimen/my_shop_item_more_dialog_sub_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/my_shop_item_more_dialog_update_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/my_shop_item_more_dialog_between_text"
                android:text="@string/my_shop_item_more_dialog_update_desc"
                android:textColor="#000000"
                android:textSize="@dimen/my_shop_item_more_dialog_desc" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView722"
            android:layout_width="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_height="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/my_shop_item_more_dialog_horizontal_margin"
            app:srcCompat="@drawable/global_next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_marginTop="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_marginBottom="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_shop_item_more_dialog_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_shop_item_more_dialog_share"
                android:textColor="#000000"
                android:textSize="@dimen/my_shop_item_more_dialog_sub_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/my_shop_item_more_dialog_share_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/my_shop_item_more_dialog_between_text"
                android:text="@string/my_shop_item_more_dialog_share_desc"
                android:textColor="#000000"
                android:textSize="@dimen/my_shop_item_more_dialog_desc" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView724"
            android:layout_width="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_height="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/my_shop_item_more_dialog_horizontal_margin"
            app:srcCompat="@drawable/global_next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_marginTop="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_marginBottom="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_shop_item_more_dialog_nego"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_shop_item_more_dialog_nego"
                android:textColor="#000000"
                android:textSize="@dimen/my_shop_item_more_dialog_sub_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/my_shop_item_more_dialog_nego_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/my_shop_item_more_dialog_between_text"
                android:text="@string/my_shop_item_more_dialog_nego_desc"
                android:textColor="#000000"
                android:textSize="@dimen/my_shop_item_more_dialog_desc" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView725"
            android:layout_width="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_height="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/my_shop_item_more_dialog_horizontal_margin"
            app:srcCompat="@drawable/global_next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/my_shop_item_more_dialog_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_marginTop="@dimen/my_shop_item_more_dialog_vertical_margin"
            android:layout_marginBottom="@dimen/my_shop_item_more_dialog_vertical_margin"
            android:layout_weight="1"
            android:text="@string/my_shop_item_more_dialog_change"
            android:textColor="#000000"
            android:textSize="@dimen/my_shop_item_more_dialog_sub_title"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView726"
            android:layout_width="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_height="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/my_shop_item_more_dialog_horizontal_margin"
            app:srcCompat="@drawable/global_next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/my_shop_item_more_dialog_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/my_shop_item_more_dialog_horizontal_margin"
            android:layout_marginTop="@dimen/my_shop_item_more_dialog_vertical_margin"
            android:layout_marginBottom="64dp"
            android:layout_weight="1"
            android:text="@string/my_shop_item_more_dialog_delivery"
            android:textColor="#000000"
            android:textSize="@dimen/my_shop_item_more_dialog_sub_title"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageView727"
            android:layout_width="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_height="@dimen/my_shop_item_more_dialog_next_button"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/my_shop_item_more_dialog_horizontal_margin"
            app:srcCompat="@drawable/global_next" />
    </LinearLayout>
</LinearLayout>